wire up EIP1102

--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -8,8 +8,8 @@
   <link rel="icon" href="/favicon.ico" />
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <meta name="description" content="anglo-rpp -" />
-  <title>anglo-rpp</title>
+  <meta name="description" content="nobuntu" />
+  <title>nobuntu</title>
 </head>
 
 <body>
