--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -7,8 +7,8 @@
   <meta name="mobile-web-app-capable" content="yes">
   <link rel="icon" href="/favicon.ico" />
   <link href="https://fonts.googleapis.com/css?family=Advent+Pro&display=swap" rel="stylesheet">
-  <meta name="description" content="nobuntu" />
-  <title>nobuntu</title>
+  <meta name="description" content="time-deposit" />
+  <title>Time Deposit</title>
 </head>
 
 <body>
